# f1meter

./: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
lib/imgui/include/imgui/: imconfig.h  imgui.h
lib/implot/: CMakeLists.txt
src/: Application.cpp  Application.h  main.cpp
src/gui/: Context.cpp  Context.h  Dockspace.cpp  Dockspace.h  GuiState.h  PlotWindow.cpp  PlotWindow.h
src/gui/internal/: PhysicalWindow.cpp  PhysicalWindow.h  RenderContext.cpp  RenderContext.h
src/render/: PhysicalWindow.cpp  PhysicalWindow.h  RenderingContext.cpp  RenderingContext.h
src/telemetry/: Telemetry.cpp  Telemetry.h
src/telemetry/data/: TelemetryData.h
src/telemetry/udp/: PacketProcessing.cpp  PacketProcessing.h  PacketTypes.h  UdpServer.cpp  UdpServer.h  UdpSocket.cpp  UdpSocket.h
src/telemetry/udp/platform/: UdpSocketWindows.cpp  UdpSocketWindows.h
